--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^7.2.1",
     "core-js": "^2.6.2",
     "extdate": "^0.3.5",
-    "ng-infinite-calendar": "^0.1.6",
+    "ng-infinite-calendar": "file:../ng-infinite-calendar/dist/ng-infinite-calendar-0.1.7.tgz",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.9.0",
